--- a/front/src/Style/style.scss
+++ b/front/src/Style/style.scss
@@ -578,14 +578,11 @@
     }
 
     h1{
-      
       font-size: 60px;
       font-family: 'nasalization';
       text-align: center;
       color: white;
       justify-content: center;
-
-      // top/: 50%;
     }
     p{
         font-size: 15px;
@@ -598,200 +595,264 @@
     }
   }
 
-    .Register { 
-      position: relative;
-      grid-area: photo; 
-      background-color: rgb(5, 0, 0);
-    // background-image: url(./img/BlueSunGlaring.jpg);
+  .photo-nasa { 
+    position: relative;
+    grid-area: photo; 
+    background-color: transparent;
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // font-size: 60px;
+    font-family: 'nasalization';
+    text-align: center;
+    height: 98%;
+    color:white;
+    padding-top: 10px;
+    padding-left: 20px;
 
-      // background-image: url(../img/leftMoon.webp);
-      // background-image: url(../img/astronaut-60582_1920.jpg);
-      // background-image: url(./img/Sky_Full_Of_Stars.jpeg);
-      // background-size: cover;
-      background-size: 1800px;
-      background-repeat: no-repeat;
-      font-family: 'nasalization';
-      
-      
-      .formWrapper {
-        position: absolute;
-        top: 38%;
-        left: 54%;
-        transform: translate(-50%, -50%);
-        // background-color: rgb(30, 1, 1);
-        // background-color: transparent;
-        background-image: url(../img/astronaut-60582_1920.jpg); 
-        background-size: cover;
-
-        background-repeat: no-repeat;
-
-
-        border: solid 3px #f50505;
-        padding: 20px 60px;
+    img{
+        max-width: 1200px;
+        max-height: 800px;
         border-radius: 10px;
-        height: 600px;
-        width: 350px;
+    }
+    .title{
+      position: absolute;
+      top: 30%;
+      left:55%;
+      width: 480px;
+      height: 670px;
+
+      h2{
+        font-family: 'nasalization';
+        text-align: center;
+        justify-content: center;
+
+      }
+    }
+
+    .buz{
+      position: absolute;
+      top: 62%;
+      left: 44%;
+      width: 800px;
+      height: 150px;
+
+      p{
+        font-size: 25px;
+      }
+    }
+
+    h1{
+      font-size: 60px;
+      font-family: 'nasalization';
+      text-align: center;
+      color: white;
+      justify-content: center;
+    }
+    p{
+        font-size: 15px;
+        color:white;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding-left: 10px;
+
+    }
+  }
+
+  .Register { 
+    position: relative;
+    grid-area: photo; 
+    background-color: rgb(5, 0, 0);
+  // background-image: url(./img/BlueSunGlaring.jpg);
+
+    // background-image: url(../img/leftMoon.webp);
+    // background-image: url(../img/astronaut-60582_1920.jpg);
+    // background-image: url(./img/Sky_Full_Of_Stars.jpeg);
+    // background-size: cover;
+    background-size: 1800px;
+    background-repeat: no-repeat;
+    font-family: 'nasalization';
+    
+    
+    .formWrapper {
+      position: absolute;
+      top: 38%;
+      left: 54%;
+      transform: translate(-50%, -50%);
+      // background-color: rgb(30, 1, 1);
+      // background-color: transparent;
+      background-image: url(../img/astronaut-60582_1920.jpg); 
+      background-size: cover;
+
+      background-repeat: no-repeat;
+
+
+      border: solid 3px #f50505;
+      padding: 20px 60px;
+      border-radius: 10px;
+      height: 600px;
+      width: 350px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+  
+  
+  
+      form {
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        align-items: center;
-    
-    
-    
-        form {
-          display: flex;
-          flex-direction: column;
-          gap: 30px;
-          position: absolute;
-          top: 15%;
-          left: 19%;
-    
-            input {
-              padding: 20px;
-              border: none;
-              border-radius: 10px;
-              width: 250px;
-              border-bottom: 4px solid #f50505;
-              background-color: white;
+        gap: 30px;
+        position: absolute;
+        top: 15%;
+        left: 19%;
+  
+          input {
+            padding: 20px;
+            border: none;
+            border-radius: 10px;
+            width: 250px;
+            border-bottom: 4px solid #f50505;
+            background-color: white;
+            font-size: 25px;
+
+
+            &::placeholder {
+              color: black;
               font-size: 25px;
+              font-family: 'nasalization';
 
-
-              &::placeholder {
-                color: black;
-                font-size: 25px;
-                font-family: 'nasalization';
-
-              }
-              // &::focus {
-              //   border: none;
-              // }
             }
-    
-            button {
-              background-color: hsl(9, 96%, 45%);
-              // background-color: transparent;
-              color: white;
-              padding: 10px;
-              font-weight: bold;
-              font-size: 25px;
+            // &::focus {
+            //   border: none;
+            // }
+          }
+  
+          button {
+            background-color: hsl(9, 96%, 45%);
+            // background-color: transparent;
+            color: white;
+            padding: 10px;
+            font-weight: bold;
+            font-size: 25px;
 
-              border: none;
-              cursor: pointer;
-            }
+            border: none;
+            cursor: pointer;
+          }
+  
+          label {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            color: #8da4f1;
+            font-size: 12px;
+            cursor: pointer;
     
-            label {
-              display: flex;
-              align-items: center;
-              gap: 10px;
-              color: #8da4f1;
-              font-size: 12px;
-              cursor: pointer;
-      
-              img {
-                width: 32px;
-              }
+            img {
+              width: 32px;
             }
           }
-        p {
-          color: #5d5b8d;
-          font-size: 12px;
-          margin-top: 10px;
         }
+      p {
+        color: #5d5b8d;
+        font-size: 12px;
+        margin-top: 10px;
       }
-      
     }
     
+  }
+    
 
-    .Login { 
-      position: relative;
-      grid-area: photo; 
-      background-color: rgb(5, 0, 0);
-    // background-image: url(./img/BlueSunGlaring.jpg);
+  .Login { 
+    position: relative;
+    grid-area: photo; 
+    background-color: rgb(5, 0, 0);
+  // background-image: url(./img/BlueSunGlaring.jpg);
 
-      // background-image: url(../img/leftMoon.webp);
-      // background-image: url(../img/astronaut-60582_1920.jpg);
-      // background-image: url(./img/Sky_Full_Of_Stars.jpeg);
-      // background-size: cover;
-      background-size: 1800px;
+    // background-image: url(../img/leftMoon.webp);
+    // background-image: url(../img/astronaut-60582_1920.jpg);
+    // background-image: url(./img/Sky_Full_Of_Stars.jpeg);
+    // background-size: cover;
+    background-size: 1800px;
+    background-repeat: no-repeat;
+    font-family: 'nasalization';
+    
+    
+    .formWrapper {
+      position: absolute;
+      top: 38%;
+      left: 54%;
+      transform: translate(-50%, -50%);
+      // background-color: rgb(30, 1, 1);
+      // background-color: transparent;
+      background-image: url(../img/astronaut-60582_1920.jpg); 
+      background-size: cover;
+
       background-repeat: no-repeat;
-      font-family: 'nasalization';
-      
-      
-      .formWrapper {
-        position: absolute;
-        top: 38%;
-        left: 54%;
-        transform: translate(-50%, -50%);
-        // background-color: rgb(30, 1, 1);
-        // background-color: transparent;
-        background-image: url(../img/astronaut-60582_1920.jpg); 
-        background-size: cover;
-
-        background-repeat: no-repeat;
 
 
-        border: solid 3px #f50505;
-        padding: 20px 60px;
-        border-radius: 10px;
-        height: 600px;
-        width: 350px;
+      border: solid 3px #f50505;
+      padding: 20px 60px;
+      border-radius: 10px;
+      height: 600px;
+      width: 350px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+  
+  
+  
+      form {
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        align-items: center;
-    
-    
-    
-        form {
-          display: flex;
-          flex-direction: column;
-          gap: 30px;
-          position: absolute;
-          top: 25%;
-          left: 19%;
-    
-            input {
-              padding: 20px;
-              border: none;
-              border-radius: 10px;
-              width: 250px;
-              border-bottom: 4px solid #f50505;
-              background-color: white;
+        gap: 30px;
+        position: absolute;
+        top: 25%;
+        left: 19%;
+  
+          input {
+            padding: 20px;
+            border: none;
+            border-radius: 10px;
+            width: 250px;
+            border-bottom: 4px solid #f50505;
+            background-color: white;
+            font-size: 25px;
+
+
+            &::placeholder {
+              color: black;
               font-size: 25px;
+              font-family: 'nasalization';
 
-
-              &::placeholder {
-                color: black;
-                font-size: 25px;
-                font-family: 'nasalization';
-
-              }
-              // &::focus {
-              //   border: none;
-              // }
             }
-    
-            button {
-              background-color: hsl(9, 96%, 45%);
-              // background-color: transparent;
-              color: white;
-              padding: 10px;
-              font-weight: bold;
-              font-size: 25px;
-
-              border: none;
-              cursor: pointer;
-            }
+            // &::focus {
+            //   border: none;
+            // }
           }
+  
+          button {
+            background-color: hsl(9, 96%, 45%);
+            // background-color: transparent;
+            color: white;
+            padding: 10px;
+            font-weight: bold;
+            font-size: 25px;
 
-
-        p {
-          color: #5d5b8d;
-          font-size: 12px;
-          margin-top: 10px;
+            border: none;
+            cursor: pointer;
+          }
         }
+
+
+      p {
+        color: #5d5b8d;
+        font-size: 12px;
+        margin-top: 10px;
       }
-      
     }
+    
+  }
   
   
