--- a/front/src/Style/style.scss
+++ b/front/src/Style/style.scss
@@ -585,13 +585,12 @@
       justify-content: center;
     }
     p{
-        font-size: 15px;
-        color:white;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        padding-left: 10px;
-
+      font-size: 15px;
+      color:white;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding-left: 10px;
     }
   }
 
@@ -608,26 +607,96 @@
     color:white;
     padding-top: 10px;
     padding-left: 20px;
+    font-size: 18px;
 
     img{
-        max-width: 1200px;
-        max-height: 800px;
-        border-radius: 10px;
+      max-width: 1200px;
+      max-height: 800px;
+      border-radius: 10px;
     }
-    .title{
+
+    button{
       position: absolute;
-      top: 30%;
-      left:55%;
-      width: 480px;
-      height: 670px;
+      background-color: transparent;
+      top: 87%;
+      left: 17%;
+      color:red;
+      font-size: 20px;
 
-      h2{
-        font-family: 'nasalization';
-        text-align: center;
-        justify-content: center;
-
+      &:hover {
+        color: blue;
+        border: none;
+      }
+      &:focus{
+          outline:none;
       }
     }
+
+    p{
+      position: relative;
+      background-color:transparent;
+      transform: translate(50%, 50%);
+      border-radius: 10px;
+      color:white;
+      font-size: 35px;
+      line-height: 35px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      text-align:justify;
+
+      max-width: 900px;
+      max-height: 600px;
+      top:20%;
+      left: 21%;
+    }
+
+    h2{
+      font-family: 'nasalization';
+      text-align: center;
+      justify-content: center;
+
+    }
+    
+    .getInfos{
+      position: absolute;
+      background-color: transparent;
+      top: 87%;
+      left: 77%;
+      color:rgb(250, 250, 250);
+      font-size: 20px;
+
+      &:hover {
+        color: blue;
+        border: none;
+      }
+      &:focus{
+        // color: rgb(51, 3, 244);
+        outline:none;
+      }
+
+    }
+
+    .infos{
+      position: absolute;
+      background-color:transparent;
+      border-radius: 10px;
+      color:white;
+      font-size: 25px;
+      line-height: 35px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      text-align:justify;
+
+      max-width: 900px;
+      max-height: 600px;
+      top:-20%;
+      left: -8%;
+    }
+
 
     .buz{
       position: absolute;
@@ -639,23 +708,6 @@
       p{
         font-size: 25px;
       }
-    }
-
-    h1{
-      font-size: 60px;
-      font-family: 'nasalization';
-      text-align: center;
-      color: white;
-      justify-content: center;
-    }
-    p{
-        font-size: 15px;
-        color:white;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        padding-left: 10px;
-
     }
   }
 
@@ -767,16 +819,9 @@
     position: relative;
     grid-area: photo; 
     background-color: rgb(5, 0, 0);
-  // background-image: url(./img/BlueSunGlaring.jpg);
-
-    // background-image: url(../img/leftMoon.webp);
-    // background-image: url(../img/astronaut-60582_1920.jpg);
-    // background-image: url(./img/Sky_Full_Of_Stars.jpeg);
-    // background-size: cover;
     background-size: 1800px;
     background-repeat: no-repeat;
     font-family: 'nasalization';
-    
     
     .formWrapper {
       position: absolute;
@@ -787,9 +832,7 @@
       // background-color: transparent;
       background-image: url(../img/astronaut-60582_1920.jpg); 
       background-size: cover;
-
       background-repeat: no-repeat;
-
 
       border: solid 3px #f50505;
       padding: 20px 60px;
@@ -801,8 +844,6 @@
       gap: 10px;
       align-items: center;
   
-  
-  
       form {
         display: flex;
         flex-direction: column;
@@ -811,40 +852,39 @@
         top: 25%;
         left: 19%;
   
-          input {
-            padding: 20px;
-            border: none;
-            border-radius: 10px;
-            width: 250px;
-            border-bottom: 4px solid #f50505;
-            background-color: white;
+        input {
+          padding: 20px;
+          border: none;
+          border-radius: 10px;
+          width: 250px;
+          border-bottom: 4px solid #f50505;
+          background-color: white;
+          font-size: 25px;
+
+
+          &::placeholder {
+            color: black;
             font-size: 25px;
+            font-family: 'nasalization';
 
-
-            &::placeholder {
-              color: black;
-              font-size: 25px;
-              font-family: 'nasalization';
-
-            }
-            // &::focus {
-            //   border: none;
-            // }
           }
-  
-          button {
-            background-color: hsl(9, 96%, 45%);
-            // background-color: transparent;
-            color: white;
-            padding: 10px;
-            font-weight: bold;
-            font-size: 25px;
-
-            border: none;
-            cursor: pointer;
-          }
+          // &::focus {
+          //   border: none;
+          // }
         }
+  
+        button {
+          background-color: hsl(9, 96%, 45%);
+          // background-color: transparent;
+          color: white;
+          padding: 10px;
+          font-weight: bold;
+          font-size: 25px;
 
+          border: none;
+          cursor: pointer;
+        }
+      }
 
       p {
         color: #5d5b8d;
