--- a/front/src/Style/style.scss
+++ b/front/src/Style/style.scss
@@ -621,7 +621,7 @@
     
     .infos{
       position: absolute;
-      background-color:black;
+      background-color:transparent;
       border-radius: 10px;
       color:white;
       font-size: 24px;
@@ -636,7 +636,7 @@
       max-height: 600px;
       top:7%;
       left: 21%;
-      overflow-y:scroll;
+      // overflow-y:scroll;
       // scroll-padding: 2px;
      
     }
@@ -900,7 +900,7 @@
     
     .infos{
       position: absolute;
-      background-color:black;
+      background-color:transparent;
       border-radius: 10px;
       color:white;
       font-size: 24px;
@@ -915,9 +915,108 @@
       max-height: 600px;
       // top:-20%;
       // left: -8%;
-      top:7%;
+      top:6%;
       left: 21%;
-      overflow-y:scroll;
+      // overflow-y:scroll;
+      // scroll-padding: 2px;
+     
+    }
+
+    .swiper-button-next{
+      color: white !important;
+      position: relative;
+      top:-59%;
+      left: 92%;
+    }
+    .swiper-button-prev {
+      color:white !important;
+      position: relative;
+      top:-57%;
+      left: 6%;
+    }
+
+    
+  }
+  
+  .galleries { 
+    position: relative;
+    grid-area: photo; 
+    background-color: transparent;
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // font-size: 60px;
+    font-family: 'nasalization';
+    text-align: center;
+    height: 98%;
+    color:white;
+    padding-top: 10px;
+    padding-left: 20px;
+    font-size: 18px;
+
+    img{
+      max-width: 120px;
+      min-width: 120px;
+      max-height: 80px;
+      min-height: 80px;
+      border-radius: 10px;
+    
+       
+    } 
+
+    button{
+        position: relative;
+        background-color: white;
+        transform: translate(-50%, -50%);
+        top:-3%;
+        left: 32%;
+        color: black;
+        font-size: 20px;
+        height: 30px;
+        padding-bottom: 30px;
+
+        &:hover {
+          color: red;
+          border: none;
+        }
+        &:focus{
+          outline:none;
+          border: none;
+
+        }
+    }
+
+    h2{
+      position: relative;
+      // background-color: white;
+      transform: translate(-50%, -50%);
+      top:1%;
+      left: 33%;
+      font-family: 'nasalization';
+      text-align: center;
+      justify-content: center;
+
+    }
+    
+    .infos{
+      position: absolute;
+      background-color:transparent;
+      border-radius: 10px;
+      color:white;
+      font-size: 24px;
+      line-height: 35px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      text-align:justify;
+
+      max-width: 900px;
+      max-height: 600px;
+      // top:-20%;
+      // left: -8%;
+      top:6%;
+      left: 21%;
+      // overflow-y:scroll;
       // scroll-padding: 2px;
      
     }
